--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/typo"]
 	path = themes/typo
 	url = https://github.com/tomfran/typo.git
+[submodule "typo-theme"]
+	path = typo-theme
+	url = https://github.com/nmiller15/typo-theme
