--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
 
       - name: Test SSH connection 
         run: |
+            echo {{ secrets.EC2_PUBLIC_IP}}
             ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_PUBLIC_IP }} "echo Hello World"  
 
       - name: Deploy to EC2
