--- a/hugo.toml
+++ b/hugo.toml
@@ -1,8 +1,7 @@
-# Try hextro theme
 baseURL = 'https://nolanmiller.me/'
 languageCode = 'en-us'
-title = 'Log("Nolan");'
-theme = 'paper'
+title = 'Nolan Miller'
+theme = 'typo'
 
 # Google analytics code
 googleAnalytics = "G-729248V2CZ"
@@ -16,17 +15,17 @@ description = "Development, coffee, life."
 
 # Appearance settings
 theme = 'auto'
-colorPalette = 'default'
+colorPalette = 'base16-default'
 hideHeader = false
 
 # Intro on main page, content is markdown
-homeIntroTitle = 'Hi!'
+homeIntroTitle = ''
 homeIntroContent = """
 I'm a self taught software-developer from Ohio. I work full-stack in .NET, and I play the trombone. These things are related... I will discover how.
 """
 
 # Collection to display on home
-homeCollectionTitle = 'Posts'
+homeCollectionTitle = ''
 homeCollection = 'posts'
 
 # Lists parameters
@@ -36,18 +35,6 @@ listDateFormat = '2 Jan 2006'
 
 # Breadcrumbs
 breadcrumbs = true
-
-
-# Paper Theme Params
-color = 'wheat'
-
-github = 'https://github.com/nmiller15'
-linkedin = "https://www.linkedin.com/in/nolan-miller-2a763b20a/"
-rss = true
-
-name = 'Nolan Miller'
-bio = "I'm a self taught software-developer from Ohio. I work full-stack in .NET, and I play the trombone. These things are related... I will discover how."
-
 
 # Social icons
 [[params.social]]
@@ -78,7 +65,7 @@ name = 'Nolan Miller'
 # Syntax highlight on code blocks
 [markup]
 [markup.highlight]
-style = 'catppuccin-frappe'
+style = 'github-dark'
 
 # Giscus comments
 [params.giscus]
